[package]
name = "notatin"
version = "0.1.0"
authors = ["kimberly.stone <kimberly.stone@aon.com>"]
edition = "2018"

[dependencies]
bitflags = "1.2"
enum-primitive-derive = ">= 0.2.1"
md5 = ">= 0.7.0"
nom = "6"
num = ">= 0.4"
num-traits = ">= 0.2.14"
serde = { version = ">= 1.0", features = ["derive"] }
serde_json = ">= 1.0"
thiserror = ">= 1.0"
winstructs = ">= 0.3.0"
blake3 = ">= 0.3.8"
regex = ">= 1.5.4"
crossterm = ">= 0.21.0"
paste = ">= 1.0"
strum_macros = ">= 0.22.0"
xlsxwriter = { version = "0.6.0", optional = true }
clap = { version = "2.33", optional = true }

[dependencies.chrono]
version = ">=0.4.20"
features = ["serde"]

[dev-dependencies]
criterion = "0.3"

[features]
build-binary = ["xlsxwriter", "clap"]

[[bin]]
name = "reg_compare"
path = "./bin/reg_compare.rs"
required-features = ["build-binary"]

[[bin]]
name = "reg_dump"
path = "./bin/reg_dump/main.rs"
required-features = ["build-binary"]

[[bench]]
name = "my_benchmark"
path = "benches/my_benchmark.rs"
harness = false
