[package]
name = "notatin"
version = "1.0.1"
authors = ["Kimberly Stone <kimberly.stone@aon.com>", "Joel Uckelman <juckelman@strozfriedberg.co.uk>"]
edition = "2018"
license = "Apache-2.0"
description = "Notatin is a Rust library for parsing offline Windows Registry files."
repository = "https://github.com/strozfriedberg/notatin"
readme = "README.md"
keywords = ["forensic", "windows_registry", "parser"]
categories = ["parser-implementations"]
exclude = [
    "test_data/*",
]

[dependencies]
bitflags = ">= 2.3.1"
enum-primitive-derive = ">= 0.2.1"
md5 = "0.8.0"
nom = "8"
num = "0.4"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
winstructs = "0.3"
blake3 = "1.8"
regex = "1.11"
crossterm = "0.29.0"
paste = "1.0"
strum_macros = "0.27"
xlsxwriter = { version = "0.6", optional = true }
clap = { version = "4.5", optional = true }
walkdir = { version = "2.5", optional = true }
itertools = { version = "0.14.0", optional = true }

[dependencies.chrono]
version = ">=0.4.41"
features = ["serde"]

[dev-dependencies]
criterion = ">= 0.3"

[features]
build-binary = ["xlsxwriter", "clap", "walkdir", "itertools"]

[[bin]]
name = "reg_compare"
path = "./bin/reg_compare.rs"
required-features = ["build-binary"]

[[bin]]
name = "reg_dump"
path = "./bin/reg_dump/main.rs"
required-features = ["build-binary"]

[[bench]]
name = "my_benchmark"
path = "benches/my_benchmark.rs"
harness = false
