[package]
name = "notatin"
version = "1.0.1"
authors = ["Kimberly Stone <kimberly.stone@aon.com>", "Joel Uckelman <juckelman@strozfriedberg.co.uk>"]
edition = "2018"
license = "Apache-2.0"
description = "Notatin is a Rust library for parsing offline Windows Registry files."
repository = "https://github.com/strozfriedberg/notatin"
readme = "README.md"
keywords = ["forensic", "windows_registry", "parser"]
categories = ["parser-implementations"]
exclude = [
    "test_data/*",
]


[dependencies]
bitflags = "2.3"
blake3 = "0.3"
crossterm = "0.21"
enum-primitive-derive = "0.2"
md5 = "0.7"
nom = "6.0"
num = "0.4"
num-traits = "0.2.14"
paste = "1.0"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum_macros = "0.22"
thiserror = "1.0"
winstructs = "0.3"

clap = { version = "4.3", optional = true }
itertools = { version = "0.11", optional = true }
walkdir = { version = "2.3", optional = true }
xlsxwriter = { version = "0.6", optional = true }


[dependencies.chrono]
version = "0.4"
features = ["serde"]


[dev-dependencies]
criterion = "0.3"


[features]
build-binary = ["xlsxwriter", "clap", "walkdir", "itertools"]


[[bin]]
name = "reg_compare"
path = "./bin/reg_compare.rs"
required-features = ["build-binary"]


[[bin]]
name = "reg_dump"
path = "./bin/reg_dump/main.rs"
required-features = ["build-binary"]


[[bench]]
name = "my_benchmark"
path = "benches/my_benchmark.rs"
harness = false
