[package]
name = "pynotatin"
version = "0.1.0"
authors = ["Kimberly Stone <kimberly.stone@aon.com>"]
edition = "2018"
build = "src/build.rs"

[lib]
name = "notatin"
crate-type = ["cdylib"]

[dependencies]
notatin = { path = ".." }
pyo3 = { version = "0.12.1" }
pyo3-file = "0.3.2"
num-traits = "0.2"
log = "0.4"
chrono = "0.4"
serde_json = "1"
csv = "1"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
pyo3-build-config = "0.16.5"

[features]
default = ["pyo3/extension-module"]

[tool.maturin]
sdist-include = ["Cargo.lock"]
