[package]
name = "pynotatin"
version = "1.0.1"
authors = ["Kimberly Stone <kimberly.stone@aon.com>"]
edition = "2018"

[lib]
name = "notatin"
crate-type = ["cdylib"]

[dependencies]
notatin = { path = ".." }
pyo3 = { version = ">= 0.18.1", features = ["auto-initialize"] }
pyo3-file = ">= 0.7.0"
num-traits = ">= 0.2"
log = ">= 0.4"
chrono = ">= 0.4"
serde_json = ">= 1"
csv = ">= 1"
serde = { version = ">= 1.0", features = ["derive"] }

[features]
default = ["pyo3/extension-module"]

[tool.maturin]
sdist-include = ["Cargo.lock"]
