[tool.poetry]
name = "pynotatin"
version = "1.0.0"
authors = ["kimberly.stone <kimberly.stone@aon.com>"]
description = "Python bindings for notatin"

[build-system]
requires = ["maturin>=0.11,<0.12"]
build-backend = "maturin"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
maturin = "^0.11.2"
